src/test/deca/context/valid/return/return_int_arithmetic.deca
// Description :
// Retour d’une expression arithmétique int
//
// Resultats :
// ok

class A {
    int f() { 
        int a = 2; 
        int b = 3; 
        return a * b + 5; 
    }
}
