src/test/deca/context/invalid/fields/assign_to_protected_field_from_foreign_class.deca
// Description :
//    Affectation d'un champ protected depuis une classe étrangère.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
protected int x;
}

class B {
    void f(A a) {
        a.x = 3;
    }
}

{
}

